# voca_test

./: .claudeignore  .gitignore  .pre-commit-config.yaml  AUDIO_GENERATION.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_COMPLETE_KR.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  REFACTOR.md  REFACTOR1.md  REFACTOR2.md  SD_LOCAL_SETUP.md  TODO.md  UV_GUIDE.md  build_python.sh  build_wasm.sh  docker-compose.yml  generate_audio.py  pyproject.toml  requirements.txt  run.sh  sideproject.cpp  voca.cpp
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_STATUS.txt  README.md  SUMMARY_KR.md  TESTING_SUMMARY_KR.md  init_db.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: __init__.py  auth.py  decks.py  image.py  session.py  tts.py
backend/app/core/: security.py  voca_engine.py
backend/app/models/: __init__.py  cache.py  deck.py  session.py  user.py  wrong_stats.py
backend/app/schemas/: __init__.py  deck.py  image.py  session.py  tts.py  user.py
backend/app/services/: image_service.py  session_service.py  tts_service.py
backend/tests/: README.md  api_test.py  auth_test.py  conftest.py  image_service_test.py  session_service_test.py  test_api.py  test_image_service.py  test_session_service.py  test_tts_service.py  test_voca_engine.py  tts_service_test.py  voca_engine_test.py
cloudflare-worker/: README.md  wrangler.toml
cloudflare-worker-github/: README.md  wrangler.toml
cloudflare-worker-github/src/: index.js
cloudflare-worker-image/: README.md  wrangler.toml
cloudflare-worker-image/src/: index.js
cloudflare-worker/src/: index.js
docs/: index.html  manifest.json  sw.js
docs/css/: style.css
docs/js/: app.js  auth.js  image_association.js  storage.js  tts.js
docs/words/: 1.csv  11_12.csv  13.csv  14.csv  14_wrong.csv  14_wrong_wrong.csv  16.csv  16_wrong.csv  17_wrong.csv  18.csv  19.csv  20.csv  20_wrong.csv  21_wrong.csv  23.csv  23_wrong.csv  25.csv  26.csv  27.csv  28.csv  29.csv  2_wrong_wrong.csv  30.csv  31.csv  456.csv  5.csv  5_wrong.csv  6.csv  6_wrong.csv
include/voca_test/: voca.hpp  voca_engine.hpp  voca_loader.hpp  voca_repository.hpp  voca_result.hpp  voca_saver.hpp  voca_session.hpp  voca_wasm.hpp
src/: CLAUDE.md  multiple_main.cpp  python_bindings.cpp  simple_main.cpp  voca.cpp  voca_engine.cpp  voca_loader.cpp  voca_repository.cpp  voca_result.cpp  voca_saver.cpp  voca_session.cpp  voca_wasm.cpp
tests/: CLAUDE.md  test_engine.cpp  test_golden.cpp  test_loader.cpp  test_regression.cpp  test_result.cpp  test_session.cpp  test_wasm_api.cpp
tests/data/: test_words.csv
voca/: 1.csv  2.csv  ~$6.csv
web/: index.html  manifest.json  sw.js
web/js/: storage.js
words/: 12.csv  123.csv  15.csv  15_wrong.csv  17.csv  19.csv  1_wrong.csv  2.csv  21.csv  24.csv  24_wrong.csv  27_wrong.csv  29_wrong.csv  2_wrong.csv  2_wrong_wrong_wrong.csv  30_wrong.csv  456_wrong.csv  6.csv
