[project]
name = "voca-test-backend"
version = "1.0.0"
description = "FastAPI backend for vocabulary test application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "python-multipart==0.0.6",
    "httpx==0.26.0",
    "pybind11==2.11.1",
    "python-dotenv==1.0.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "faker==20.1.0",
    "responses==0.24.1",
]
